Fixing Background on Mobile

--- a/src/components/AnimatedBackground/AnimatedBackground.scss
+++ b/src/components/AnimatedBackground/AnimatedBackground.scss
@@ -1,7 +1,7 @@
 .background-container {
 	display: inline-block;
 	width: 100%;
-	height: 100vh;
+	height: calc(100vh + 34px);
 
 	position: fixed;
 	z-index: 0;
@@ -10,7 +10,7 @@
 /********************************************/
 
 .white {
-	height: 100vh;
+	height: calc(100vh + 34px);
 	&:before {
 		z-index: 0;
 		content: '';
